--- a/pytorch_fundamentals/tensors/basic.ipynb
+++ b/pytorch_fundamentals/tensors/basic.ipynb
@@ -1,8 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Basic Tensors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.1 Introduction"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,17 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# scaler tensor\n",
     "scalar = tc.tensor(7)\n",
@@ -34,20 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([8, 8])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# vector tensor\n",
     "vector = tc.tensor([8,8])\n",
@@ -56,21 +51,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[7, 8],\n",
-       "        [8, 7]])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# matrix\n",
     "MATRIX = tc.tensor([[7,8],[8,7]])\n",
@@ -79,17 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([2, 3, 4])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# tebnsor\n",
     "TENSOR = tc.tensor(\n",
@@ -99,6 +74,72 @@
     "    ]\n",
     ")\n",
     "print(TENSOR.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.2 Random Tensors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating a random tensor\n",
+    "\n",
+    "rand_tensor = tc.rand(3, 4,6)\n",
+    "rand_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create random tensor with similar shape to an image tensor\n",
+    "random_image_size_tensor = tc.rand(size=(224,224,3))\n",
+    "random_image_size_tensor.shape, random_image_size_tensor.ndim"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2.1 Zero and one tensors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zeros = tc.zeros(size=(3,5))\n",
+    "ones = tc.ones(size=(4,5))\n",
+    "print(zeros,\"\\n\",ones)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2.2 Range of tensors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "range = tc.range(1, 13, 3)\n",
+    "arr = tc.arange(start=1,end=1001,step=77)\n",
+    "print(range,\"\\n\",arr)"
    ]
   },
   {
