--- a/pytorch_fundamentals/tensors/basic.ipynb
+++ b/pytorch_fundamentals/tensors/basic.ipynb
@@ -143,6 +143,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.3 Tensor datatypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# float 32 tensors\n",
+    "float_32_tensor = tc.tensor(\n",
+    "    [1, 2, 3, 4], dtype=tc.float16, device=None, requires_grad=False\n",
+    ")\n",
+    "float_32_tensor"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
