operation on tensors

--- a/pytorch_fundamentals/tensors/basic.ipynb
+++ b/pytorch_fundamentals/tensors/basic.ipynb
@@ -163,6 +163,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.4 Getting information from tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating a tensor\n",
+    "some_tensor = tc.rand(3,4)\n",
+    "\n",
+    "# finding details on the tensor\n",
+    "print(some_tensor)\n",
+    "print(f\"Shape of tensor: {some_tensor.shape}\")\n",
+    "print(f\"Datatype of tensor: {some_tensor.dtype}\")\n",
+    "print(f\"Device of the tensor: {some_tensor.device}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4.1 Manipulating tensors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creare a tensor\n",
+    "tensor = tc.tensor([1,2,3])\n",
+    "print(tensor + 12)\n",
+    "print(tensor * 6)\n",
+    "print(tensor / 10)\n",
+    "print(tensor - (-6))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.4.1.1 Matrix Multiplication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = tc.tensor([[1,2,3],[4,5,6]])\n",
+    "b = tc.tensor([[1,2],[3,4],[5,6]])\n",
+    "c = tc.matmul(a,b)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tensor aggregation\n",
+    "x = tc.arange(0,101,10)\n",
+    "print(tc.min(x),x.argmin())\n",
+    "print(tc.max(x),x.argmax())\n",
+    "print(x.dtype)\n",
+    "print(tc.mean(x.type(tc.float32)))\n",
+    "print(tc.median(x.type(tc.float32)))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
