--- a/pytorch_fundamentals/tensors/pytorch_numpy.ipynb
+++ b/pytorch_fundamentals/tensors/pytorch_numpy.ipynb
@@ -65,6 +65,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.8 Reproducability .. Trying to random out of random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tc.rand(3,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "randA = tc.rand(3,4)\n",
+    "randB = tc.rand(3,4)\n",
+    "\n",
+    "print(randA,\"\\n\",randB,\"\\n\",randB == randA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random seed\n",
+    "RANDOM_SEED = 42\n",
+    "tc.manual_seed(RANDOM_SEED)\n",
+    "\n",
+    "randC = tc.rand(3, 4)\n",
+    "\n",
+    "tc.manual_seed(RANDOM_SEED)\n",
+    "randD = tc.rand(3, 4)\n",
+    "\n",
+    "print(randC, \"\\n\", randD, \"\\n\", randD == randC)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
