--- a/pytorch_fundamentals/tensors/pytorch_numpy.ipynb
+++ b/pytorch_fundamentals/tensors/pytorch_numpy.ipynb
@@ -113,7 +113,53 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 1.9 Running Pytorch on a tensor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.9.1 Using a GPU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check for gpu access\n",
+    "tc.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = \"cuda\" if tc.cuda.is_available() else \"cpu\"\n",
+    "device"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.9.2 Putting tensors on a gpu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tensor = tc.tensor([1,2,3],device=device)\n",
+    "print(tensor,tensor.device)"
+   ]
   },
   {
    "cell_type": "code",
