--- a/pytorch_workflow/basic.ipynb
+++ b/pytorch_workflow/basic.ipynb
@@ -84,6 +84,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.2 Visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_pred(\n",
+    "    train_data=X_train,\n",
+    "    train_label=y_train,\n",
+    "    test_data=X_test,\n",
+    "    test_label=y_test,\n",
+    "    predictions=None,\n",
+    "):\n",
+    "  \"\"\"\n",
+    "  Function to train data, test data and compare predictions\n",
+    "  \"\"\"\n",
+    "  plt.figure(figsize=(10,7))\n",
+    "  plt.scatter(train_data,train_label,c=\"b\",s=16,label=\"Training data\")\n",
+    "  plt.scatter(test_data,test_label,c=\"g\",s=16,label=\"Testing data\")\n",
+    "  \n",
+    "  # Are there predictions?\n",
+    "  if predictions is not None:\n",
+    "    plt.scatter(test_data,predictions,c=\"r\",label=\"Predictions\")\n",
+    "    \n",
+    "  plt.legend(prop={\"size\":14})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_pred()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
