--- a/pytorch_workflow/basic.ipynb
+++ b/pytorch_workflow/basic.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pytorch workflow"
+    "# 2. Pytorch workflow\n"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.1 Preparing and Loading Data"
+    "## 2.1 Preparing and Loading Data\n"
    ]
   },
   {
@@ -49,7 +49,7 @@
     "start = 0\n",
     "end = 1\n",
     "step = 0.02\n",
-    "X = tc.arange(start,end,step).unsqueeze(dim=1)\n",
+    "X = tc.arange(start, end, step).unsqueeze(dim=1)\n",
     "y = weight * X + bias\n",
     "X[:10], y[:10]"
    ]
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1.1 Data splitting"
+    "### 1.1.1 Data splitting\n"
    ]
   },
   {
@@ -77,8 +77,8 @@
     "# print(X_train, \"\\n\", X_test, \"\\n\", y_train, \"\\n\", y_test)\n",
     "\n",
     "train_split = int(0.8 * len(X))\n",
-    "X_train,y_train = X[:train_split], y[:train_split]\n",
-    "X_test,y_test = X[train_split:], y[train_split:]\n",
+    "X_train, y_train = X[:train_split], y[:train_split]\n",
+    "X_test, y_test = X[train_split:], y[train_split:]\n",
     "# print(X_train[:10], \"\\n\", X_test[:5], \"\\n\", y_train[:10], \"\\n\", y_test[:5])\n",
     "len(X_train), len(y_train), len(X_test), len(y_test)"
    ]
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.2 Visualization"
+    "## 2.2 Visualization\n"
    ]
   },
   {
@@ -103,18 +103,18 @@
     "    test_label=y_test,\n",
     "    predictions=None,\n",
     "):\n",
-    "  \"\"\"\n",
-    "  Function to train data, test data and compare predictions\n",
-    "  \"\"\"\n",
-    "  plt.figure(figsize=(10,7))\n",
-    "  plt.scatter(train_data,train_label,c=\"b\",s=16,label=\"Training data\")\n",
-    "  plt.scatter(test_data,test_label,c=\"g\",s=16,label=\"Testing data\")\n",
-    "  \n",
-    "  # Are there predictions?\n",
-    "  if predictions is not None:\n",
-    "    plt.scatter(test_data,predictions,c=\"r\",label=\"Predictions\")\n",
-    "    \n",
-    "  plt.legend(prop={\"size\":14})"
+    "    \"\"\"\n",
+    "    Function to train data, test data and compare predictions\n",
+    "    \"\"\"\n",
+    "    plt.figure(figsize=(10, 7))\n",
+    "    plt.scatter(train_data, train_label, c=\"b\", s=16, label=\"Training data\")\n",
+    "    plt.scatter(test_data, test_label, c=\"g\", s=16, label=\"Testing data\")\n",
+    "\n",
+    "    # Are there predictions?\n",
+    "    if predictions is not None:\n",
+    "        plt.scatter(test_data, predictions, c=\"r\", label=\"Predictions\")\n",
+    "\n",
+    "    plt.legend(prop={\"size\": 14})"
    ]
   },
   {
@@ -124,6 +124,61 @@
    "outputs": [],
    "source": [
     "plot_pred()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.3 Building a model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating a linear regression model\n",
+    "class LinearRegressionModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.weights = nn.Parameter(tc.randn(1, requires_grad=True, dtype=tc.float))\n",
+    "        self.bias = nn.Parameter(tc.randn(1, requires_grad=True, dtype=tc.float))\n",
+    "\n",
+    "        # forward methodez\n",
+    "        def forward(self, x: tc.tensor) -> tc.Tensor:\n",
+    "            return self.weights * x + self.bias"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3.1 Pytorch model building essentials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating a random seed\n",
+    "tc.manual_seed(42)\n",
+    "\n",
+    "model0 = LinearRegressionModel()\n",
+    "model0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check the parameters\n",
+    "list(model0.parameters())"
    ]
   },
   {
