--- a/pytorch_workflow/basic.ipynb
+++ b/pytorch_workflow/basic.ipynb
@@ -147,15 +147,8 @@
     "        self.bias = nn.Parameter(tc.randn(1, requires_grad=True, dtype=tc.float))\n",
     "\n",
     "        # forward methodez\n",
-    "        def forward(self, x: tc.tensor) -> tc.Tensor:\n",
-    "            return self.weights * x + self.bias"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.3.1 Pytorch model building essentials"
+    "    def forward(self, x: tc.tensor) -> tc.Tensor:\n",
+    "        return self.weights * x + self.bias"
    ]
   },
   {
@@ -179,6 +172,153 @@
    "source": [
     "# check the parameters\n",
     "list(model0.parameters())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.4 Making predictions from our model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tc.inference_mode():\n",
+    "  y_preds = model0(X_test)\n",
+    "y_preds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_pred(predictions=y_preds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.5 Training a model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(model0.parameters())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(model0.state_dict())\n",
+    "loss_fn = nn.L1Loss()\n",
+    "print(loss_fn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# setting up optimiser\n",
+    "optimiser = tc.optim.SGD(params=model0.parameters(),lr=0.01)\n",
+    "print(optimiser)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tc.no_grad():\n",
+    "  list(model0.parameters())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# building a training loop\n",
+    "tc.manual_seed(42)\n",
+    "epochs = 100\n",
+    "\n",
+    "# loop through the data\n",
+    "for epoch in range(epochs):\n",
+    "  # set the model to training mode\n",
+    "  model0.train() # train mode in pytorch sets all parameters that require gradient to train\n",
+    "  \n",
+    "  # 1. forward pass\n",
+    "  y_pred =  model0(X_train)\n",
+    "  \n",
+    "  # 2. Calculate the loss\n",
+    "  loss = loss_fn(y_pred,y_train)\n",
+    "  print(f\"Loss: {loss}\")\n",
+    "  \n",
+    "  # 3. Optimise zero grad\n",
+    "  optimiser.zero_grad()\n",
+    "  \n",
+    "  # 4. Perform backpropagation on the loss with respect to the parameters of the model\n",
+    "  loss.backward()\n",
+    "  \n",
+    "  # 5. Step the optimiser (gradient descent)\n",
+    "  optimiser.step() \n",
+    "  model0.eval() # turns off gradient tracking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(model0.state_dict())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tc.inference_mode():\n",
+    "  y_preds_new = model0(X_test)\n",
+    "  \n",
+    "y_preds_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_pred(predictions=y_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_pred(predictions=y_preds_new)"
    ]
   },
   {
