testing the model

--- a/pytorch_workflow/basic.ipynb
+++ b/pytorch_workflow/basic.ipynb
@@ -269,7 +269,7 @@
     "  \n",
     "  # 2. Calculate the loss\n",
     "  loss = loss_fn(y_pred,y_train)\n",
-    "  print(f\"Loss: {loss}\")\n",
+    "  # print(f\"Loss: {loss}\")\n",
     "  \n",
     "  # 3. Optimise zero grad\n",
     "  optimiser.zero_grad()\n",
@@ -279,7 +279,15 @@
     "  \n",
     "  # 5. Step the optimiser (gradient descent)\n",
     "  optimiser.step() \n",
-    "  model0.eval() # turns off gradient tracking"
+    "  model0.eval() # turns off different meetings in the model not needed for evaluation\n",
+    "  with tc.inference_mode(): # turns off gradient tracking\n",
+    "    # 1. Do the forward pass\n",
+    "    test_pred = model0(X_test)\n",
+    "    \n",
+    "    # 2. Calculate the loss\n",
+    "    test_loss = loss_fn(test_pred,y_test)\n",
+    "  if epoch % 10 == 0:\n",
+    "    print(f\"Epoch: {epoch} | Loss: {loss} | Test loss: {test_loss}\")"
    ]
   },
   {
