--- a/pytorch_workflow/basic.ipynb
+++ b/pytorch_workflow/basic.ipynb
@@ -257,7 +257,12 @@
    "source": [
     "# building a training loop\n",
     "tc.manual_seed(42)\n",
-    "epochs = 100\n",
+    "epochs = 200\n",
+    "\n",
+    "# TRacking the values\n",
+    "epoch_count = []\n",
+    "loss_values = []\n",
+    "test_loss_values = []\n",
     "\n",
     "# loop through the data\n",
     "for epoch in range(epochs):\n",
@@ -287,7 +292,12 @@
     "    # 2. Calculate the loss\n",
     "    test_loss = loss_fn(test_pred,y_test)\n",
     "  if epoch % 10 == 0:\n",
-    "    print(f\"Epoch: {epoch} | Loss: {loss} | Test loss: {test_loss}\")"
+    "    epoch_count.append(epoch)\n",
+    "    loss_values.append(loss)\n",
+    "    test_loss_values.append(test_loss)\n",
+    "    print(f\"Epoch: {epoch} | Loss: {loss} | Test loss: {test_loss}\")\n",
+    "    # print out model state_dict()\n",
+    "    print(model0.state_dict())"
    ]
   },
   {
@@ -327,6 +337,21 @@
    "outputs": [],
    "source": [
     "plot_pred(predictions=y_preds_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot the loss curves\n",
+    "plt.plot(epoch_count,np.array(tc.tensor(loss_values).cpu().numpy()),label=\"Train Loss\")\n",
+    "plt.plot(epoch_count,test_loss_values,label=\"Test loss\")\n",
+    "plt.title(\"Training and test loss curve\")\n",
+    "plt.ylabel(\"Loss\")\n",
+    "plt.xlabel(\"Epoch\")\n",
+    "plt.legend()"
    ]
   },
   {
