saving and loading models

--- a/pytorch_workflow/basic.ipynb
+++ b/pytorch_workflow/basic.ipynb
@@ -355,6 +355,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.6 Saving a model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# saving our pytorch model\n",
+    "from pathlib import Path\n",
+    "# create model directory\n",
+    "MODEL_PATH = Path(\"models\")\n",
+    "MODEL_PATH.mkdir(parents=True,exist_ok=True)\n",
+    "MODEL_NAME = \"01_pytorch_workflow_model.pth\"\n",
+    "MODEL_SAVE_PATH = MODEL_PATH / MODEL_NAME\n",
+    "MODEL_SAVE_PATH\n",
+    "\n",
+    "# save the model state_dict\n",
+    "print(f\"Saving model to: {MODEL_SAVE_PATH}\")\n",
+    "tc.save(obj=model0.state_dict(),f=MODEL_SAVE_PATH)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loading a model\n",
+    "loaded_model0 = LinearRegressionModel()\n",
+    "\n",
+    "# load the saved state_dict of model 0\n",
+    "loaded_model0.load_state_dict(tc.load(f=MODEL_SAVE_PATH))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loaded_model0.eval()\n",
+    "with tc.inference_mode():\n",
+    "  loaded_model_preds = loaded_model0(X_test)\n",
+    "  \n",
+    "loaded_model_preds\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compare the two models\n",
+    "y_preds_new == loaded_model_preds"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
