building linear model

--- a/pytorch_workflow/basic.ipynb
+++ b/pytorch_workflow/basic.ipynb
@@ -418,6 +418,201 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.7 Building a Linear Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LinearRegressionModelV2(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        # using nn.Linear() for creating the model parameters\n",
+    "        self.linear_layer = nn.Linear(in_features=1, out_features=1)\n",
+    "\n",
+    "    def forward(self, x: tc.Tensor) -> tc.Tensor:\n",
+    "        return self.linear_layer(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set the maual seed\n",
+    "tc.manual_seed(42)\n",
+    "model1 = LinearRegressionModelV2()\n",
+    "model1, model1.state_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train[:5], y_train[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check the model current device\n",
+    "device = next(model1.parameters()).device\n",
+    "device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set the model to use the target device\n",
+    "model1.to(device)\n",
+    "next(model1.parameters()).device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set up yhe loss function\n",
+    "loss_fn1 = nn.L1Loss()\n",
+    "\n",
+    "# set up optimizer\n",
+    "optimizer = tc.optim.SGD(params=model1.parameters(),lr=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train loop\n",
+    "tc.manual_seed(42)\n",
+    "\n",
+    "epochses = 200\n",
+    "for epochse in range(epochses):\n",
+    "  model1.train()\n",
+    "  \n",
+    "  # 1. forward pass\n",
+    "  y_pred1 = model1(X_train)\n",
+    "  \n",
+    "  # 2. Calculate the loss\n",
+    "  loss = loss_fn1(y_pred1,y_train)\n",
+    "  \n",
+    "  # 3. Optimizer zero grad\n",
+    "  optimizer.zero_grad()\n",
+    "  \n",
+    "  # 4. Perform backpropagation\n",
+    "  loss.backward()\n",
+    "  \n",
+    "  # 5. Optimize\n",
+    "  optimizer.step()\n",
+    "  \n",
+    "  # Testing\n",
+    "  model1.eval()\n",
+    "  \n",
+    "  with tc.inference_mode():\n",
+    "    test_pred1 = model1(X_test)\n",
+    "    \n",
+    "    test_loss1 = loss_fn1(test_pred1,y_test)\n",
+    "    \n",
+    "  # print what is happening\n",
+    "  if epochse % 10 == 0:\n",
+    "    print(f\"Epoch: {epochse} | Loss: {loss} | Test Loss: {test_loss1}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(weight,bias)\n",
+    "print(model1.state_dict())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.7.1 Making predictions from our linear model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tc.inference_mode():\n",
+    "  y_preds1 = model1(X_test)\n",
+    "y_preds1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_pred(predictions=y_preds1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.7.2 Saving our Linear Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create model directory\n",
+    "MODEL_PATH1 = Path(\"models\")\n",
+    "MODEL_PATH1.mkdir(parents=True, exist_ok=True)\n",
+    "MODEL_NAME1 = \"01_pytorch_workflow_linear_model.pth\"\n",
+    "MODEL_SAVE_PATH1 = MODEL_PATH / MODEL_NAME\n",
+    "MODEL_SAVE_PATH1\n",
+    "\n",
+    "# save the model state_dict\n",
+    "print(f\"Saving model to: {MODEL_SAVE_PATH}\")\n",
+    "tc.save(obj=model0.state_dict(), f=MODEL_SAVE_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loading our model\n",
+    "loaded_model1 = LinearRegressionModelV2()\n",
+    "\n",
+    "# load the saved state_dict of model 0\n",
+    "loaded_model1.load_state_dict(tc.load(MODEL_SAVE_PATH1))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
