creating multi layer neural network model

--- a/neural_network_classification/intro.ipynb
+++ b/neural_network_classification/intro.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.1 Creating dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -55,6 +62,98 @@
    "outputs": [],
    "source": [
     "plt.scatter(x=X[:,0],y=X[:,1],c=y,cmap=\"viridis\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2 Check input and output shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X.shape, y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Viewing features and labels\n",
+    "X_sample = X[0]\n",
+    "y_sample = y[0]\n",
+    "\n",
+    "print(f\"Values for one sample of X:\\n{X_sample}\\nAnd the same for y:\\n{y_sample}\")\n",
+    "print(f\"Shapes for one sample of X:\\n{X_sample.shape}\\nAnd the same for y:\\n{y_sample.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.3 Turning Data into tensors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = tc.from_numpy(X).type(tc.float)\n",
+    "y = tc.from_numpy(y).type(tc.float)\n",
+    "\n",
+    "X[:5], y[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# split data into train test set\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train,X_test,y_train,y_test = train_test_split(X,y,random_state=42,test_size=0.3)\n",
+    "print(X_test[:5],X_train[:5],y_train[:5],y_test[:5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.4 Building a model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Custruct a model\n",
+    "class CircleModelV1(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        # 2. Create 2 nn.linear layer to handle shapes of our data\n",
+    "        self.layer1 = nn.Linear(in_features=2, out_features=5)\n",
+    "        self.layer2 = nn.Linear(in_features=5, out_features=1)\n",
+    "\n",
+    "    # 3. Define a forward method that outlines the forward pass\n",
+    "    def forward(self, x):\n",
+    "        return self.layer2(self.layer1(x))\n",
+    "    \n",
+    "# 4. Instantiate an instance of our model class and send it to target device\n",
+    "model0 = CircleModelV1().to(device=\"cpu\")\n",
+    "model0"
    ]
   },
   {
