--- a/neural_network_classification/intro.ipynb
+++ b/neural_network_classification/intro.ipynb
@@ -144,16 +144,38 @@
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        # 2. Create 2 nn.linear layer to handle shapes of our data\n",
-    "        self.layer1 = nn.Linear(in_features=2, out_features=5)\n",
-    "        self.layer2 = nn.Linear(in_features=5, out_features=1)\n",
+    "        # self.layer1 = nn.Linear(in_features=2, out_features=5)\n",
+    "        # self.layer2 = nn.Linear(in_features=5, out_features=1)\n",
+    "\n",
+    "        self.two_linear_layers = nn.Sequential(\n",
+    "            nn.Linear(in_features=2, out_features=5),\n",
+    "            nn.Linear(in_features=5, out_features=1),\n",
+    "        )\n",
     "\n",
     "    # 3. Define a forward method that outlines the forward pass\n",
     "    def forward(self, x):\n",
-    "        return self.layer2(self.layer1(x))\n",
-    "    \n",
+    "        # return self.layer2(self.layer1(x))\n",
+    "        return self.two_linear_layers(x)\n",
+    "\n",
+    " \n",
     "# 4. Instantiate an instance of our model class and send it to target device\n",
     "model0 = CircleModelV1().to(device=\"cpu\")\n",
     "model0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# making some predictions\n",
+    "# model0.state_dict()\n",
+    "preds1 = model0(X_test)\n",
+    "print(f\"Length of predictions: {len(preds1)},\\nShape: {preds1.shape}\")\n",
+    "print(f\"Length of test samples: {len(X_test)},\\nShape: {X_test.shape}\")\n",
+    "print(f\"Length of train samples: {len(X_test)},\\nShape: {X_train.shape}\")\n",
+    "print(f\"First 10 predictions:\\n{preds1[:10]}\")"
    ]
   },
   {
