--- a/neural_network_classification/intro.ipynb
+++ b/neural_network_classification/intro.ipynb
@@ -179,11 +179,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.5 Setting up a loss function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "loss_fn = nn.BCEWithLogitsLoss # sigmoid activation function\n",
+    "optimiser = tc.optim.SGD(params=model0.parameters(),lr=0.1)\n",
+    "\n",
+    "# model0.state_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# evaluation matrix\n",
+    "def accuracy_fc(y_true, y_pred):\n",
+    "    correct = tc.eq(y_true, y_pred).sum().item()\n",
+    "    acc = (correct / len(y_pred)) * 100\n",
+    "    return acc"
+   ]
   }
  ],
  "metadata": {
