attempt to improve failed

--- a/neural_network_classification/intro.ipynb
+++ b/neural_network_classification/intro.ipynb
@@ -328,6 +328,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.7 Refining our model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CircleModelV2(nn.Module):\n",
+    "  def __init__(self):\n",
+    "    super().__init__()\n",
+    "    self.layer_1 = nn.Linear(in_features=2,out_features=10)\n",
+    "    self.layer_2 = nn.Linear(in_features=10,out_features=10)\n",
+    "    self.layer_3 = nn.Linear(in_features=10,out_features=1)\n",
+    "    \n",
+    "  def forward(self,x):\n",
+    "    return self.layer_3(self.layer_2(self.layer_1(x)))\n",
+    "  \n",
+    "model1 = CircleModelV2()\n",
+    "model1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# setting up a loss function\n",
+    "loss_fn1 = nn.BCEWithLogitsLoss()\n",
+    "\n",
+    "# creating optimiser\n",
+    "optimizer = tc.optim.SGD(params=model1.parameters(),lr=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# training and evaluating loop model\n",
+    "tc.manual_seed(42)\n",
+    "\n",
+    "epochses = 1000\n",
+    "\n",
+    "for epochse in range(epochses):\n",
+    "    # training\n",
+    "    model1.train()\n",
+    "    # 1. forward pass\n",
+    "    y_logits1 = model1(X_train).squeeze()\n",
+    "    y_pred1 = tc.round(tc.sigmoid(y_logits1))\n",
+    "    # calculate the loss/acc\n",
+    "    loss1 = loss_fn1(y_logits1, y_train)\n",
+    "    acc = accuracy_fc(y_true=y_train, y_pred=y_pred1)\n",
+    "    # 3. Optimize zero gradient\n",
+    "    optimizer.zero_grad()\n",
+    "    # 4. loss backwards\n",
+    "    loss1.backward()\n",
+    "    # 5. optimiser step\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    # testing\n",
+    "    model1.eval()\n",
+    "    with tc.inference_mode():\n",
+    "        # 1. forward pass\n",
+    "        test_logits1 = model1(X_test).squeeze()\n",
+    "        test_pred1 = tc.round(tc.sigmoid(test_logits1))\n",
+    "        # 2. calculate the loss\n",
+    "        test_loss1 = loss_fn1(test_logits1, y_test)\n",
+    "        test_acc1 = accuracy_fc(y_true=y_test, y_pred=test_pred1)\n",
+    "        # print what happenned\n",
+    "        if epochse % 50 == 0:\n",
+    "            print(\n",
+    "                f\"Epoch: {epochse} | Loss: {loss1:.5f}, Acc: {acc:.2f}% | Test loss: {test_loss1:.5f}, Test acc: {test_acc1:.2f}%\"\n",
+    "            )"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
