visualising our dataset

--- a/computer_vision/vision.ipynb
+++ b/computer_vision/vision.ipynb
@@ -27,14 +27,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Please do not run the code below more than once"
+    "## 4.1 Getting our datsets"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.1 Getting our datsets"
+    "#### Please do not run the code below more than once"
    ]
   },
   {
@@ -98,6 +98,120 @@
    "source": [
     "class_to_idx = train_data.class_to_idx\n",
     "class_to_idx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.2 Visualising random sample data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Image Shape: {image.shape}\")\n",
+    "plt.imshow(image.squeeze())\n",
+    "plt.title(label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gray scale\n",
+    "plt.imshow(image.squeeze(),cmap=\"gray\")\n",
+    "plt.title(classnames[label])\n",
+    "plt.axis(False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# visualising random images\n",
+    "tc.manual_seed(42)\n",
+    "fig = plt.figure(figsize=(9,9))\n",
+    "rows,cols = 4,4\n",
+    "for i in range(1,rows*cols+1):\n",
+    "  random_idx = tc.randint(0,len(train_data),size=[1]).item()\n",
+    "  # print(random_idx)\n",
+    "  img,lab = train_data[random_idx]\n",
+    "  fig.add_subplot(rows,cols,i)\n",
+    "  plt.imshow(img.squeeze(),cmap=\"gray\")\n",
+    "  plt.title(classnames[lab])\n",
+    "  plt.axis(False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.2.1 Preparing Data Loader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "# batch size hyper parameter\n",
+    "BATCH_SIZE = 32\n",
+    "\n",
+    "# turn dataset into iterable\n",
+    "train_dataloader = DataLoader(dataset=train_data, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "test_dataloader = DataLoader(dataset=test_data, batch_size=BATCH_SIZE, shuffle=False)\n",
+    "\n",
+    "train_dataloader,test_dataloader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"DataLoaders: {train_dataloader,test_dataloader}\")\n",
+    "print(f\"Length of train data loader: {len(train_dataloader)} batches of {BATCH_SIZE}...\")\n",
+    "print(f\"Length of test data loader: {len(test_dataloader)} batches of {BATCH_SIZE}...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# checking training data loader\n",
+    "train_features_batch, train_label_batch = next(iter(train_dataloader))\n",
+    "train_features_batch.shape,train_label_batch.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# show a sample\n",
+    "tc.manual_seed(42)\n",
+    "random_idx = tc.randint(0,len(train_features_batch),size=[1]).item()\n",
+    "img, lab = train_features_batch[random_idx],train_label_batch[random_idx]\n",
+    "plt.imshow(img.squeeze(),cmap=\"gray\")\n",
+    "plt.title(classnames[lab])\n",
+    "plt.axis(False)\n",
+    "print(f\"Image size: {img.shape}\")\n",
+    "print(f\"Label: {lab}, Label size: {lab.shape}\")"
    ]
   },
   {
