--- a/computer_vision/vision.ipynb
+++ b/computer_vision/vision.ipynb
@@ -215,6 +215,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.3 Creating a model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# building a baseline model\n",
+    "flatten_model = nn.Flatten()\n",
+    "\n",
+    "# get a single sample\n",
+    "x = train_features_batch[0]\n",
+    "x.shape\n",
+    "# flatten x\n",
+    "output = flatten_model(x)\n",
+    "print(f\"Shape before flattening: {x.shape}\\nShape after flattening: {output.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FashionMNISTModelV0(nn.Module):\n",
+    "  def __init__(self,input_shape:int,hidden_unit:int,output_shpe:int):\n",
+    "    super().__init__()\n",
+    "    self.layer_stack = nn.Sequential(\n",
+    "      nn.Flatten(),\n",
+    "      nn.Linear(in_features=input_shape,out_features=hidden_unit),\n",
+    "      nn.Linear(in_features=hidden_unit,out_features=output_shpe)\n",
+    "    )\n",
+    "    \n",
+    "  def forward(self,x):\n",
+    "    return self.layer_stack(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tc.manual_seed(42)\n",
+    "model0 = FashionMNISTModelV0(input_shape=784,hidden_unit=10,output_shpe=len(classnames))\n",
+    "\n",
+    "model0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.3.1 Setup loss function and optimiser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import accuracy functions\n",
+    "from helper import accuracy_fn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss_fn = nn.CrossEntropyLoss()\n",
+    "optimiser = tc.optim.SGD(params=model0.parameters(),lr=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# setting up timer function\n",
+    "from timeit import default_timer as timer\n",
+    "\n",
+    "\n",
+    "def print_train_time(start: float, end: float, devive: tc.device = None):\n",
+    "    \"\"\"Prints difference between start time and end time\"\"\"\n",
+    "    total_time = end - start\n",
+    "    print(f\"Train time on {devive}: {total_time:.3f} seconds\")\n",
+    "    return total_time"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
