--- a/computer_vision/vision.ipynb
+++ b/computer_vision/vision.ipynb
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,6 +311,101 @@
     "    total_time = end - start\n",
     "    print(f\"Train time on {devive}: {total_time:.3f} seconds\")\n",
     "    return total_time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.3.2 Training loop for our model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate accuracy (a classification metric)\n",
+    "def accuracy_fn(y_true, y_pred):\n",
+    "    \"\"\"Calculates accuracy between truth labels and predictions.\n",
+    "\n",
+    "    Args:\n",
+    "        y_true (torch.Tensor): Truth labels for predictions.\n",
+    "        y_pred (torch.Tensor): Predictions to be compared to predictions.\n",
+    "\n",
+    "    Returns:\n",
+    "        [torch.float]: Accuracy value between y_true and y_pred, e.g. 78.45\n",
+    "    \"\"\"\n",
+    "    correct = tc.eq(y_true, y_pred).sum().item()\n",
+    "    acc = (correct / len(y_pred)) * 100\n",
+    "    return acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm.auto import tqdm\n",
+    "\n",
+    "# set the seed\n",
+    "tc.manual_seed(42)\n",
+    "start_time = timer()\n",
+    "\n",
+    "# set epochs\n",
+    "epochs = 3\n",
+    "\n",
+    "# create training and test loop\n",
+    "for epoch in tqdm(range(epochs)):\n",
+    "  print(f\"Epoch: {epoch}\\n-----\")\n",
+    "  # training\n",
+    "  train_loss = 0\n",
+    "  # add a loop to loop through the training batches\n",
+    "  for batch,(X,y) in enumerate(train_dataloader):\n",
+    "    model0.train()\n",
+    "    # 1. forward pass\n",
+    "    y_pred = model0(X)\n",
+    "    # 2. calculate the loss\n",
+    "    loss = loss_fn(y_pred,y)\n",
+    "    train_loss +=loss\n",
+    "    # 3. optimise the zero grad\n",
+    "    optimiser.zero_grad()\n",
+    "    # 4. loss backward\n",
+    "    loss.backward()\n",
+    "    # optimise the step\n",
+    "    optimiser.step()\n",
+    "  \n",
+    "    # print what is happening\n",
+    "    if batch % 400 == 0:\n",
+    "      print(f\"Looked at {batch * len(X)}/{len(train_dataloader.dataset)} samples\")\n",
+    "\n",
+    "  # Divide total train loss by the lenght of the train dataloader\n",
+    "  train_loss /= len(train_dataloader)\n",
+    "  \n",
+    "  ### Testing\n",
+    "  test_loss,test_acc = 0,0\n",
+    "  model0.eval()\n",
+    "  with tc.inference_mode():\n",
+    "    for X_test,y_test in test_dataloader:\n",
+    "      # 1. forward pass\n",
+    "      test_pred = model0(X_test)\n",
+    "      # 2. calculate the loss\n",
+    "      test_loss += loss_fn(test_pred,y_test)\n",
+    "      # 3. calculate accuracy\n",
+    "      test_acc += accuracy_fn(y_true=y_test,y_pred=test_pred.argmax(dim=1))\n",
+    "    # calculate the test loss avg per batch\n",
+    "    test_loss /= len(test_dataloader)\n",
+    "    # calculate the test acc avg per batch\n",
+    "    test_acc /= len(test_dataloader)\n",
+    "    \n",
+    "  # print what is happening\n",
+    "  print(f\"\\nTrain loss: {train_loss:.4f} | Test loss: {test_loss:.4f}, Test acc: {test_acc:.3f}\")\n",
+    "  \n",
+    "# Calculate the training time\n",
+    "end_time = timer()\n",
+    "total_time0 = print_train_time(start=start_time,end=end_time,devive=str(next(model0.parameters()).device))"
    ]
   },
   {
