--- a/computer_vision/vision.ipynb
+++ b/computer_vision/vision.ipynb
@@ -409,6 +409,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.4 Making Predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# making some predictions\n",
+    "tc.manual_seed(42)\n",
+    "def eval_model(model:tc.nn.Module,data_loader:tc.utils.data.DataLoader,loss_fn:tc.nn.Module,accuracy_fn):\n",
+    "  \"\"\"Return a disctionary containing the results of model predicting on data loader.\"\"\"\n",
+    "  \n",
+    "  loss, acc = 0,0\n",
+    "  model.eval()\n",
+    "  with tc.inference_mode():\n",
+    "    for X,y in data_loader:\n",
+    "      # make predictions\n",
+    "      y_pred = model(X)\n",
+    "      \n",
+    "      # accumulate the loss and acc values per patch\n",
+    "      loss += loss_fn(y_pred,y)\n",
+    "      acc += accuracy_fn(y_true=y,y_pred=y_pred.argmax(dim=1))\n",
+    "    # scalle the loss and acc\n",
+    "    loss /= len(data_loader)\n",
+    "    acc /= len(data_loader)\n",
+    "    \n",
+    "  return {\"Model name\": model.__class__.__name__,\"Model Loss\": loss.item(),\"Model acc\": acc}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate model 0 result on our dataset\n",
+    "model0_results = eval_model(model=model0,data_loader=test_dataloader,loss_fn=loss_fn,accuracy_fn=accuracy_fn)\n",
+    "\n",
+    "model0_results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
