--- a/computer_vision/vision.ipynb
+++ b/computer_vision/vision.ipynb
@@ -457,11 +457,145 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.5 Improving through experimentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.5.1 Building a better model with non linearlity"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class FashionMNISTModelV1(nn.Module):\n",
+    "  def __init__(self,input_shape:int,hidden_units:int,output_shape:int):\n",
+    "    super().__init__()\n",
+    "    self.layer_stack = nn.Sequential(\n",
+    "      nn.Flatten(),\n",
+    "      nn.Linear(in_features=input_shape,out_features=hidden_units),\n",
+    "      nn.ReLU(),\n",
+    "      nn.Linear(in_features=hidden_units,out_features=output_shape),\n",
+    "      nn.ReLU()\n",
+    "    )\n",
+    "  \n",
+    "  def forward(self,x:tc.Tensor):\n",
+    "    return self.layer_stack(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating an instanc of model 1\n",
+    "tc.manual_seed(42)\n",
+    "model1 = FashionMNISTModelV1(input_shape=784,hidden_units=10,output_shape=len(classnames))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.5.1.1 Setting up loss function and optimizer and a training loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loss_fn1 = nn.CrossEntropyLoss()\n",
+    "optimiser1 = tc.optim.SGD(params=model1.parameters(),lr=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# set the seed\n",
+    "tc.manual_seed(42)\n",
+    "start_time = timer()\n",
+    "\n",
+    "# set epochs\n",
+    "epochs = 3\n",
+    "\n",
+    "# create training and test loop\n",
+    "for epoch in tqdm(range(epochs)):\n",
+    "    print(f\"Epoch: {epoch}\\n-----\")\n",
+    "    # training\n",
+    "    train_loss = 0\n",
+    "    # add a loop to loop through the training batches\n",
+    "    for batch, (X, y) in enumerate(train_dataloader):\n",
+    "        model1.train()\n",
+    "        # 1. forward pass\n",
+    "        y_pred = model0(X)\n",
+    "        # 2. calculate the loss\n",
+    "        loss = loss_fn(y_pred, y)\n",
+    "        train_loss += loss\n",
+    "        # 3. optimise the zero grad\n",
+    "        optimiser1.zero_grad()\n",
+    "        # 4. loss backward\n",
+    "        loss.backward()\n",
+    "        # optimise the step\n",
+    "        optimiser1.step()\n",
+    "\n",
+    "        # print what is happening\n",
+    "        if batch % 400 == 0:\n",
+    "            print(f\"Looked at {batch * len(X)}/{len(train_dataloader.dataset)} samples\")\n",
+    "\n",
+    "    # Divide total train loss by the lenght of the train dataloader\n",
+    "    train_loss /= len(train_dataloader)\n",
+    "\n",
+    "    ### Testing\n",
+    "    test_loss, test_acc = 0, 0\n",
+    "    model1.eval()\n",
+    "    with tc.inference_mode():\n",
+    "        for X_test, y_test in test_dataloader:\n",
+    "            # 1. forward pass\n",
+    "            test_pred = model1(X_test)\n",
+    "            # 2. calculate the loss\n",
+    "            test_loss += loss_fn(test_pred, y_test)\n",
+    "            # 3. calculate accuracy\n",
+    "            test_acc += accuracy_fn(y_true=y_test, y_pred=test_pred.argmax(dim=1))\n",
+    "        # calculate the test loss avg per batch\n",
+    "        test_loss /= len(test_dataloader)\n",
+    "        # calculate the test acc avg per batch\n",
+    "        test_acc /= len(test_dataloader)\n",
+    "\n",
+    "    # print what is happening\n",
+    "    print(\n",
+    "        f\"\\nTrain loss: {train_loss:.4f} | Test loss: {test_loss:.4f}, Test acc: {test_acc:.3f}\"\n",
+    "    )\n",
+    "\n",
+    "# Calculate the training time\n",
+    "end_time = timer()\n",
+    "total_time1 = print_train_time(\n",
+    "    start=start_time, end=end_time, devive=str(next(model1.parameters()).device)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
+   ]
   }
  ],
  "metadata": {
