--- a/computer_vision/vision.ipynb
+++ b/computer_vision/vision.ipynb
@@ -589,12 +589,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.5.1.2 Functionising raining anf evaluation loop"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# "
+    "def train_step(model:tc.nn.Module,data_loader:tc.utils.data.DataLoader,loss_fn:tc.nn.Module,optimiser:tc.optim.Optimizer,accuracy_fn):\n",
+    "  \"\"\"Performs training step with model trying to learn on data loader\"\"\"\n",
+    "  \n",
+    "  train_loss,train_acc = 0,0\n",
+    "  # put model in training mode\n",
+    "  model.train()\n",
+    "  for batch,(X,y) in enumerate(data_loader):\n",
+    "    # 1. forward pass\n",
+    "    y_pred = model(X)\n",
+    "    \n",
+    "    # 2. calculate the loss and acc per batch\n",
+    "    loss = loss_fn(y_pred,y)\n",
+    "    train_loss += loss\n",
+    "    train_acc += accuracy_fn(y_true=y,y_pred=y_pred.argmax(dim=1))\n",
+    "    \n",
+    "    # 3. optimize the zero grad\n",
+    "    optimiser.zero_grad()\n",
+    "    \n",
+    "    # 4. Loss backward\n",
+    "    loss.backward()\n",
+    "    \n",
+    "    # 5. optimize the step\n",
+    "    optimiser.step()\n",
+    "    \n",
+    "    # print out whats happening\n",
+    "    # if batch % 400 == 0:\n",
+    "    #   print(f\"Looked at {batch * len(X)}/{len(train_dataloader.dataset)} samples\")\n",
+    "      \n",
+    "  # Divide total train loss and acc by length of train data loader\n",
+    "  train_loss /= len(data_loader)\n",
+    "  train_acc /= len(data_loader)\n",
+    "  print(f\"Train loss: {train_loss:.5f} | Train acc: {train_acc:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_step():\n",
+    "  pass"
    ]
   }
  ],
