testing our optimised code, modularised our test loop function

--- a/computer_vision/vision.ipynb
+++ b/computer_vision/vision.ipynb
@@ -576,10 +576,10 @@
     "        # calculate the test acc avg per batch\n",
     "        test_acc /= len(test_dataloader)\n",
     "\n",
-    "    # print what is happening\n",
-    "    print(\n",
-    "        f\"\\nTrain loss: {train_loss:.4f} | Test loss: {test_loss:.4f}, Test acc: {test_acc:.3f}\"\n",
-    "    )\n",
+    "        # print what is happening\n",
+    "        print(\n",
+    "            f\"\\nTrain loss: {train_loss:.4f} | Test loss: {test_loss:.4f}, Test acc: {test_acc:.3f}\"\n",
+    "        )\n",
     "\n",
     "# Calculate the training time\n",
     "end_time = timer()\n",
@@ -641,9 +641,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test_step():\n",
-    "  pass"
+    "def test_step(model:tc.nn.Module,data_loader:tc.utils.data.DataLoader,loss_fn:tc.nn.Module,accuracy_fn):\n",
+    "  \"\"\"Performs testing step with model trying to learn on data loader\"\"\"\n",
+    "  ### Testing\n",
+    "  test_loss, test_acc = 0, 0\n",
+    "  model.eval()\n",
+    "  with tc.inference_mode():\n",
+    "    for X_test, y_test in data_loader:\n",
+    "      # 1. forward pass\n",
+    "      test_pred = model(X_test)\n",
+    "      # 2. calculate the loss\n",
+    "      test_loss += loss_fn(test_pred, y_test)\n",
+    "      # 3. calculate accuracy\n",
+    "      test_acc += accuracy_fn(y_true=y_test, y_pred=test_pred.argmax(dim=1))\n",
+    "    # calculate the test loss avg per batch\n",
+    "    test_loss /= len(data_loader)\n",
+    "    # calculate the test acc avg per batch\n",
+    "    test_acc /= len(data_loader)\n",
+    "\n",
+    "    # print what is happening\n",
+    "    print(\n",
+    "      f\"\\nTest loss: {test_loss:.4f}, Test acc: {test_acc:.3f}\"\n",
+    "    )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tc.manual_seed(42)\n",
+    "# measuring the time\n",
+    "start_time1 = timer()\n",
+    "\n",
+    "# set epochs\n",
+    "epchs = 3\n",
+    "# create optimization and evaluation hooks\n",
+    "for epch in tqdm(range(epchs)):\n",
+    "    print(f\"Epoch: {epch}\")\n",
+    "    train_step(\n",
+    "        model=model1,\n",
+    "        data_loader=train_dataloader,\n",
+    "        loss_fn=loss_fn,\n",
+    "        optimiser=optimiser1,\n",
+    "        accuracy_fn=accuracy_fn,\n",
+    "    )\n",
+    "    test_step(\n",
+    "        model=model1,\n",
+    "        data_loader=test_dataloader,\n",
+    "        loss_fn=loss_fn,\n",
+    "        accuracy_fn=accuracy_fn,\n",
+    "    )\n",
+    "    \n",
+    "end_time1 = timer()\n",
+    "total_time1 = print_train_time(start=start_time1,end=end_time1,devive=\"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(model0_results)\n",
+    "print(total_time0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
