--- a/computer_vision/vision.ipynb
+++ b/computer_vision/vision.ipynb
@@ -713,6 +713,85 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# get model1 eval dictionary\n",
+    "model1_results = eval_model(model=model1,data_loader=test_dataloader,loss_fn=loss_fn,accuracy_fn=accuracy_fn)\n",
+    "model1_results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.5.2 Improving our model with Convolutional Neural Network (CNN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating a CNN\n",
+    "class FashionMNISTModelV2(nn.Module):\n",
+    "  \"\"\"\n",
+    "  Model architechture that replicate a TinyVGG\n",
+    "  \"\"\"\n",
+    "  def __init__(self,input_shape:int,hidden_units:int,output_shape:int):\n",
+    "    super().__init__()\n",
+    "    self.conv_block_1 = nn.Sequential(\n",
+    "      nn.Conv2d(in_channels=input_shape,out_channels=hidden_units,kernel_size=3,stride=1,padding=1),\n",
+    "      nn.ReLU(),\n",
+    "      nn.Conv2d(in_channels=hidden_units,out_channels=hidden_units,kernel_size=3,stride=1,padding=1),\n",
+    "      nn.ReLU(),\n",
+    "      nn.MaxPool2d(kernel_size=2)\n",
+    "    )\n",
+    "    \n",
+    "    self.conv_block_2 = nn.Sequential(\n",
+    "      nn.Conv2d(in_channels=hidden_units,out_channels=hidden_units,kernel_size=3,stride=1,padding=1),\n",
+    "      nn.ReLU(),\n",
+    "      nn.Conv2d(in_channels=hidden_units,out_channels=hidden_units,kernel_size=3,stride=1,padding=1),\n",
+    "      nn.ReLU(),\n",
+    "      nn.MaxPool2d(kernel_size=2)\n",
+    "    )\n",
+    "    \n",
+    "    self.classifier = nn.Sequential(\n",
+    "      nn.Flatten(),\n",
+    "      nn.Linear(in_features=hidden_units*0,out_features=output_shape)\n",
+    "    )\n",
+    "  \n",
+    "  def forward(self,x):\n",
+    "    x = self.conv_block_1(x)\n",
+    "    print(x.shape)\n",
+    "    x = self.conv_block_2(x)\n",
+    "    print(x.shape)\n",
+    "    x = self.classifier(x)\n",
+    "    print(x.shape)\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tc.manual_seed(42)\n",
+    "model2 = FashionMNISTModelV2(input_shape=1,hidden_units=10,output_shape=len(classnames))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.5.2.1 Stepping through nn.Conv2d()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
